--- a/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
+++ b/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
@@ -16,6 +16,7 @@
   padding: var(--padding-top) 0;
 
   font: var(--title-font);
+  color: var(--text-primary);
   text-align: center;
 }
 
@@ -92,5 +93,4 @@
   .signin__img {
     width: 200px;
   }
-
 }
