--- a/packages/client/src/shared/ui/Link/ui/Link.module.scss
+++ b/packages/client/src/shared/ui/Link/ui/Link.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
 
   font: var(--regular-font);
-  color: var(--dark-color);
+  color: var(--text-primary);
   text-decoration: none;
 }
 
