--- a/packages/client/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/packages/client/src/shared/ui/Modal/ui/Modal.module.scss
@@ -72,6 +72,7 @@
 
   font: var(--title-font);
   font-size: calc(var(--regular-font-size) * 1.5);
+  color: var(--text-primary);
 }
 
 .modal__close {
