--- a/packages/client/src/app/styles/index.scss
+++ b/packages/client/src/app/styles/index.scss
@@ -4,6 +4,7 @@
 
 @import 'https://fonts.googleapis.com/css2?family=VT323&display=swap';
 
+html,
 body {
   display: flex;
   flex-direction: column;
@@ -19,6 +20,34 @@ body {
   background-color: var(--background-color);
   background-image: url('../../shared/assets/images/fish-pattern-inversed.png');
   background-repeat: repeat;
+}
+
+html[data-theme='light'] {
+  --medium-pink-color: #d58383;
+  --dark-color: #201d0c;
+  --brown-color: #793c3b;
+  --light-pink-color: #ffefef;
+  --background-color: #ffe761;
+  --secondary-color: #484848;
+  --secondary-dark-color: #7e7e7e;
+  --primary-color: #cf5c36;
+  --success-color: #4ab00b;
+  --input-color: #fff9c7;
+}
+
+html[data-theme='dark'] {
+  --medium-pink-color: #d58383;
+  --dark-color: #201d0c;
+  --brown-color: #C79190;
+  --light-pink-color: #ffefef;
+  --background-color: #252630;
+  --secondary-color: #B7B9C1;
+  --secondary-dark-color: #FFFDEE;
+  --primary-color: #cf5c36;
+  --success-color: #4ab00b;
+  --input-color: #fff9c7;
+  --text-primary: #FFFDEE;
+  --text-secondary: #c5c2b5;
 }
 
 * {
