--- a/packages/client/src/app/styles/themes/dark.scss
+++ b/packages/client/src/app/styles/themes/dark.scss
@@ -1,3 +1,11 @@
 .dark {
-  // dark theme
+  --medium-pink-color: #d58383;
+  --dark-color: #201d0c;
+  --brown-color: #793c3b;
+  --light-pink-color: #ffefef;
+  --background-color: #252630;
+  --secondary-color: #484848;
+  --primary-color: #cf5c36;
+  --success-color: #4ab00b;
+  --input-color: #fff9c7;
 }
