--- a/packages/client/src/pages/LeaderboardPage/ui/LeaderboardPage.module.scss
+++ b/packages/client/src/pages/LeaderboardPage/ui/LeaderboardPage.module.scss
@@ -13,6 +13,8 @@
     justify-content: center;
 
     width: 100%;
+
+    color: var(--text-primary);
   }
 }
 
@@ -27,6 +29,8 @@
   width: 100%;
   max-width: 1000px;
   padding: 0 20px;
+
+  color: var(--text-primary);
 }
 
 @media screen and (max-width: 768px) {
