--- a/packages/client/src/shared/ui/ForumHeader/ui/ForumHeader.module.scss
+++ b/packages/client/src/shared/ui/ForumHeader/ui/ForumHeader.module.scss
@@ -10,7 +10,7 @@
   text-transform: uppercase;
 
   background-color: var(--dark-color);
-  background-image: url('../../assets/MessagePattern.png');
+  background-image: url('../../../assets/images/MessagePattern.png');
   background-repeat: repeat;
   background-position-y: 50%;
 
