Get forums, get topics

--- a/packages/client/src/pages/ForumTopicsPage/ui/ForumTopicsPage.module.scss
+++ b/packages/client/src/pages/ForumTopicsPage/ui/ForumTopicsPage.module.scss
@@ -8,6 +8,11 @@
   max-width: 1020px;
   max-height: 70vh;
   margin: auto;
-  margin-top: 65px;
+  margin-top: 30px;
   padding: 0 20px;
+}
+
+.topic_add_button {
+  margin: auto;
+  margin-top: 30px;
 }
