--- a/packages/client/src/shared/ui/ForumEntry/ui/ForumEntry.module.scss
+++ b/packages/client/src/shared/ui/ForumEntry/ui/ForumEntry.module.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
 
   width: 100%;
-  padding: 0;
+  padding: 20px;
 
   color: white;
 
@@ -21,7 +21,6 @@
     align-items: center;
 
     max-width: 500px;
-    padding: 0 0 0 20px;
 
     &:nth-child(2) {
       padding: 0;
