--- a/packages/client/src/shared/ui/ForumComment/ui/ForumComment.module.scss
+++ b/packages/client/src/shared/ui/ForumComment/ui/ForumComment.module.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
 
-  min-width: 200px;
-  max-width: 600px;
+  width: 100%;
   padding: 0;
 
   color: white;
@@ -19,6 +18,7 @@
     align-items: center;
     justify-content: space-between;
 
+    width: 100%;
     padding: 20px;
 
     div:nth-child(1) {
@@ -32,6 +32,18 @@
         height: 70px;
       }
     }
+  }
+
+  &__reply {
+    padding: 0;
+  }
+
+  &__icon {
+    width: 70px;
+    height: 70px;
+
+    background-color: var(--dark-color);
+    border-radius: 10px;
   }
 
   &__body {
