--- a/packages/client/src/pages/ForumTopicPage/ui/ForumTopicPage.module.scss
+++ b/packages/client/src/pages/ForumTopicPage/ui/ForumTopicPage.module.scss
@@ -9,7 +9,7 @@
   margin: auto;
   margin-top: 60px;
 
-  &_comments {
+  &__comments {
     overflow: auto;
     display: flex;
     flex-direction: column;
@@ -20,10 +20,42 @@
     padding: 0 20px;
   }
 
-  &_input_area {
+  .input_area {
     display: flex;
     gap: 10px;
 
     width: 100%;
+
+    &__text {
+      position: relative;
+
+      display: flex;
+      gap: 10px;
+      align-items: center;
+
+      width: 100%;
+
+      &__button {
+        cursor: pointer;
+
+        background-color: transparent;
+        border: none;
+      }
+
+      &__toggle_emoji {
+        border-radius: 100%;
+      }
+
+      &__emoji {
+        position: absolute;
+        bottom: 100%;
+
+        width: 100%;
+        height: 200px;
+
+        font-size: 14px;
+      }
+    }
+
   }
 }
