add user storing in database

--- a/packages/client/src/shared/ui/ArrowBack/ui/ArrowBack.module.scss
+++ b/packages/client/src/shared/ui/ArrowBack/ui/ArrowBack.module.scss
@@ -1,7 +1,9 @@
 .arrow {
   cursor: pointer;
 
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
 
   display: flex;
   place-items: center;
