--- a/packages/client/src/pages/MainPage/ui/MainContainer/ui/ActionBlock/ui/ActionBlock.module.scss
+++ b/packages/client/src/pages/MainPage/ui/MainContainer/ui/ActionBlock/ui/ActionBlock.module.scss
@@ -18,7 +18,7 @@
 
   &__text {
     font: var(--action-block-title-font);
-    color: var(--brown-color);
+    color: var(--text-primary);
 
     transition: 0.2s ease all;
   }
