--- a/packages/client/src/shared/ui/ArrowBack/ui/ArrowBack.module.scss
+++ b/packages/client/src/shared/ui/ArrowBack/ui/ArrowBack.module.scss
@@ -11,7 +11,7 @@
   height: 100%;
   padding-left: var(--padding-left);
 
-  color: var(--dark-color);
+  color: var(--text-primary);
 
   background: none;
   border: none;
