--- a/packages/client/src/pages/ForumTopicPage/ui/ForumTopicPage.module.scss
+++ b/packages/client/src/pages/ForumTopicPage/ui/ForumTopicPage.module.scss
@@ -22,9 +22,17 @@
 
   .input_area {
     display: flex;
+    flex-direction: column;
     gap: 10px;
 
     width: 100%;
+
+    &__reply {
+      height: 40px;
+
+      font: var(--regular-sm-font);
+      color: var(--text-secondary);
+    }
 
     &__text {
       position: relative;
@@ -38,11 +46,14 @@
       &__button {
         cursor: pointer;
 
+        display: flex;
+
         background-color: transparent;
         border: none;
       }
 
       &__toggle_emoji {
+        border: 4px solid white;
         border-radius: 100%;
       }
 
@@ -56,6 +67,5 @@
         font-size: 14px;
       }
     }
-
   }
 }
