--- a/packages/client/src/shared/ui/ErrorBanner/ui/ErrorBanner.module.scss
+++ b/packages/client/src/shared/ui/ErrorBanner/ui/ErrorBanner.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  color: var(--text-primary);
 }
 
 .error {
@@ -14,8 +16,6 @@
 
 .error__link {
   margin-top: 14px;
-
-  color: var(--secondary-color);
 
   &:hover {
     color: var(--dark-color);
