--- a/packages/client/src/pages/MainPage/ui/MainContainer/ui/MainContainer.module.scss
+++ b/packages/client/src/pages/MainPage/ui/MainContainer/ui/MainContainer.module.scss
@@ -9,11 +9,19 @@
   height: 65vh;
 
   &__image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     width: auto;
     height: 300px;
-    height: 30vh;
+    height: 40vh;
 
     object-fit: contain;
+
+    & > canvas {
+      object-fit: contain;
+    }
   }
 
   &__actions {
