--- a/packages/client/src/pages/RegistrationPage/ui/styles.module.scss
+++ b/packages/client/src/pages/RegistrationPage/ui/styles.module.scss
@@ -1,7 +1,9 @@
 .reg {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+
+  height: 100vh;
 
   &__title {
     color: var(--text-primary);
@@ -11,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     height: 100%;
   }
