--- a/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
+++ b/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
@@ -14,7 +14,7 @@
   grid-column: 1 / 6;
   grid-row: 1;
 
-  padding: var(--padding-top) 0;
+  padding: var(--padding-top) 0 0 0;
 
   font: var(--title-font);
   color: var(--text-primary);
