--- a/packages/client/src/shared/ui/Link/ui/Link.module.scss
+++ b/packages/client/src/shared/ui/Link/ui/Link.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   gap: 20px;
   justify-content: center;
+  align-items: center;
 
   font: var(--regular-font);
   color: var(--text-primary);
