fix review fix link

--- a/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
+++ b/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
@@ -23,8 +23,10 @@
   }
 
   &__how-to-play {
+    display: flex;
     grid-column: 2 / 6;
     grid-row: 2;
+    justify-content: center;
   }
 
   &__pet {
