--- a/packages/client/src/shared/ui/Link/ui/Link.module.scss
+++ b/packages/client/src/shared/ui/Link/ui/Link.module.scss
@@ -7,7 +7,13 @@
 
   font: var(--regular-font);
   color: var(--text-primary);
-  text-decoration: none;
+  text-decoration: transparent;
+
+  transition: text-decoration ease-in-out .3s;
+
+  &:hover {
+    text-decoration: underline var(--text-primary);
+  }
 }
 
 .link__icon {
@@ -18,6 +24,7 @@
   position: relative;
 
   height: max-content;
+  width: fit-content;
 }
 
 @media screen and (max-width: 768px) {
