fix error banner

--- a/packages/client/src/shared/ui/ErrorBanner/ui/ErrorBanner.module.scss
+++ b/packages/client/src/shared/ui/ErrorBanner/ui/ErrorBanner.module.scss
@@ -1,17 +1,20 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+
+  height: 100vh;
 
   color: var(--text-primary);
 }
 
 .error {
-  font-size: 92px;
+  font-size: var(--title-font-size);
 }
 
 .error__message {
-  font-size: 72px;
+  font-size: var(--regular-font-size);
 }
 
 .error__link {
